--- a/assets/styles/sass/input/_wp-uploader.scss
+++ b/assets/styles/sass/input/_wp-uploader.scss
@@ -1,5 +1,5 @@
-.uploadContainer {
-	margin-top: 0 !important;
+.uploadContainer, .current-uploaded-image {
+	margin: 0 !important;
 }
 
 .uploaderSection {
